Re-naming & book summaries
Named the photo sections
Added some book summaries

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Phantom by HTML5 UP</title>
+		<title>Sarah's Book Reviews</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -61,7 +61,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Magna</h2>
+										<h2>The Inheritance Games</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -72,7 +72,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Lorem</h2>
+										<h2>Cemetery Boys</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -83,7 +83,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Feugiat</h2>
+										<h2>The House in the Cerulean Sea</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -94,7 +94,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Tempus</h2>
+										<h2>Red, White, and Royal Blue</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -105,7 +105,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Aliquam</h2>
+										<h2>Under the Whispering Door</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -116,7 +116,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Veroeros</h2>
+										<h2>The Sunbearer Trials</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -127,7 +127,7 @@
 										<img src="images/pic07.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Ipsum</h2>
+										<h2>Katzenjammer</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -138,9 +138,9 @@
 										<img src="images/pic08.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Dolor</h2>
+										<h2>Lost in the Never Woods</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>A modern retelling of Peter Pan, Aiden Thomas' sophomore novel centers on a Wendy Darling still reeling from her brothers' disappearnce five years ago and the memories she can't recall. When more kids go missing, a mysterious boy claims she is the only one with the power to find them.</p>
 										</div>
 									</a>
 								</article>
@@ -149,9 +149,10 @@
 										<img src="images/pic09.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Nullam</h2>
+										<h2>The Girl Who Fell Beneath the Sea</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<!--Re-word and shorten this descriptoin-->
+											<p>An ode to (look up original folktale), Mina takes the place of the Sea God's Bride to appease his wrath and save her brother's true love. But upon entering the spirit world, she discoves the Sea God under a cursed sleep, leaving the ocean to ravage her country in his absence. It is up to Mina and her new friends to break the curse and end her people's suffering.</p>
 										</div>
 									</a>
 								</article>
@@ -160,9 +161,9 @@
 										<img src="images/pic10.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Ultricies</h2>
+										<h2>Together We Rot</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>In Skyla Arndt's debut paranormal romance, Wil teams up with her ex-best friend Elwood to investigate her mother's disappearance and uncover the secrets behind his family's church: The Garden of Adam. But the Morguewood grows hungry, and Elwood may be their next sacrifice.</p>
 										</div>
 									</a>
 								</article>
@@ -171,9 +172,9 @@
 										<img src="images/pic11.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Dictum</h2>
+										<h2>Hide</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>A supernatural thriller, this Kiersten White novel follows the unwitting contestants of a Hide and Seek contest within an abandoned amusement park. But as more people are found, they start to question who or <em>what</em> is hunting them and have contestants been eliminated <em> permanently</em>?</p>
 										</div>
 									</a>
 								</article>
@@ -182,9 +183,9 @@
 										<img src="images/pic12.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Pretium</h2>
+										<h2>Hallowe'en Party</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Regarded as one of her darkest mysteries, this Agatha Christie novel follows Hercule Poirot as he investigates the murder of young Joyce Reynolds, who was drowned in a bucket of apples. This novel is the inspiration for <em>A Haunting in Venice</em>.</p>
 										</div>
 									</a>
 								</article>
