--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 									<a href="generic.html">
 										<h2>Katzenjammer</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>In this dark horror novel, Cat is desperately searching for a way to escape School. For as long as she can remember, she and her classmates have been trapped inside the living, breathing entity that is School. No one enters, no one leaves, and those unfortuante enough to be outcast have started changing. As more and more transformed are found in pieces, Cat will have to face the truth of her past in order to save herself from the same fate.</p>
 										</div>
 									</a>
 								</article>
