--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Red, White, and Royal Blue</h2>
+									<a href="Review-4.html">
+										<h2>Red, White & Royal Blue</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
