--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
 									<a href="generic.html">
 										<h2>The Sunbearer Trials</h2>
 										<div class="content">
-		<!--Seriously cut down on this one-->									<p><em> Percy Jackson</em> meets <em> The Hunger Games</em>, in this Mexican-influenced fantasy. Teo is a Jade semidiose son of Quetzal, the semidiosa of birds. As a Jade he will never amount to much beyond a public figure within his home city of Quetzlan, not like the Golds who become heroes renowned around... <!--insert name of world here-->But this year is the Sunbearer Trials and for the first time two Jades have been chosen to compete. Navigating a world he was never meant to be part of and a competition he was not prepared, Teo must keep his friends alive because while the winner is honored as Sunbearer, the loser is sacrificed to fuel Sol's protection for another decade.</p>
+											<!--Seriously cut down on this one-->									
+											<p><em> Percy Jackson</em> meets <em> The Hunger Games</em>, in this Mexican-influenced fantasy. Teo is a Jade semidiose son of Quetzal, the semidiosa of birds. As a Jade he will never amount to much beyond a public figure within his home city of Quetzlan, not like the Golds who become heroes renowned around... <!--insert name of world here-->But this year is the Sunbearer Trials and for the first time two Jades have been chosen to compete. Navigating a world he was never meant to be part of and a competition he was not prepared, Teo must keep his friends alive because while the winner is honored as Sunbearer, the loser is sacrificed to fuel Sol's protection for another decade.</p>
 										</div>
 									</a>
 								</article>
