--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="Reviews/Review-1.html">
+									<a href="Review-1.html">
 										<h2>The Inheritance Games</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -69,7 +69,7 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="Reviews/Review-2.html">
+									<a href="Review-2.html">
 										<h2>Cemetery Boys</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -80,7 +80,7 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="Reviews/Review-3.html">
+									<a href="Review-3.html">
 										<h2>The House in the Cerulean Sea</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -91,7 +91,7 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="Reviews/Review-4.html">
+									<a href="Review-4.html">
 										<h2>Red, White & Royal Blue</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -102,7 +102,7 @@
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
-									<a href="Reviews/Review-5.html">
+									<a href="Review-5.html">
 										<h2>Under the Whispering Door</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -113,7 +113,7 @@
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="Review-6.html">
 										<h2>The Sunbearer Trials</h2>
 										<div class="content">
 											<!--Seriously cut down on this one-->									
