--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 									<a href="Review-6.html">
 										<h2>The Sunbearer Trials</h2>
 										<div class="content">
-											<!--Seriously cut down on this one-->									
+											<!--Seriously cut down on this one-->								
 											<p><em> Percy Jackson</em> meets <em> The Hunger Games</em>, in this Mexican-influenced fantasy. Teo is a Jade semidiose son of Quetzal, the semidiosa of birds. As a Jade he will never amount to much beyond a public figure within his home city of Quetzlan, not like the Golds who become heroes renowned around... <!--insert name of world here-->But this year is the Sunbearer Trials and for the first time two Jades have been chosen to compete. Navigating a world he was never meant to be part of and a competition he was not prepared, Teo must keep his friends alive because while the winner is honored as Sunbearer, the loser is sacrificed to fuel Sol's protection for another decade.</p>
 										</div>
 									</a>
@@ -136,7 +136,7 @@
 									<span class="image">
 										<img src="images/pic08.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="Review-8.html">
 										<h2>Lost in the Never Woods</h2>
 										<div class="content">
 											<p>A modern retelling of Peter Pan, Aiden Thomas' sophomore novel centers on a Wendy Darling still reeling from her brothers' disappearnce five years ago and the memories she can't recall. When more kids go missing, a mysterious boy claims she is the only one with the power to find them.</p>
