--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 									<a href="Review-6.html">
 										<h2>The Sunbearer Trials</h2>
 										<div class="content">
-											<!--Seriously cut down on this one-->								
+											<!--Seriously cut down on this one. Too long for the cellphone view-->								
 											<p><em> Percy Jackson</em> meets <em> The Hunger Games</em>, in this Mexican-influenced fantasy. Teo is a Jade semidiose son of Quetzal, the semidiosa of birds. As a Jade he will never amount to much beyond a public figure within his home city of Quetzlan, not like the Golds who become heroes renowned around... <!--insert name of world here-->But this year is the Sunbearer Trials and for the first time two Jades have been chosen to compete. Navigating a world he was never meant to be part of and a competition he was not prepared, Teo must keep his friends alive because while the winner is honored as Sunbearer, the loser is sacrificed to fuel Sol's protection for another decade.</p>
 										</div>
 									</a>
@@ -128,6 +128,7 @@
 									<a href="generic.html">
 										<h2>Katzenjammer</h2>
 										<div class="content">
+											<!--Description too long for phone view (when the boxes are much thinner)-->
 											<p>In this dark horror novel, Cat is desperately searching for a way to escape School. For as long as she can remember, she and her classmates have been trapped inside the living, breathing entity that is School. No one enters, no one leaves, and those unfortuante enough to be outcast have started changing. As more and more transformed are found in pieces, Cat will have to face the truth of her past in order to save herself from the same fate.</p>
 										</div>
 									</a>
@@ -147,7 +148,7 @@
 									<span class="image">
 										<img src="images/pic09.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="Review-9.html">
 										<h2>The Girl Who Fell Beneath the Sea</h2>
 										<div class="content">
 											<!--Re-word and shorten this descriptoin-->
