Created Review-10 and edited Review-9 genres
Forgot to edit genres for review-9 (girl who fell beneath the sea)

Also created Review-10 for Together We Rot. Has not been edited yet, it's only a copy of the formatting from Review-9

--- a/Review-9.html
+++ b/Review-9.html
@@ -55,7 +55,7 @@
 							<p> August 14, 2023 - August 25, 2023 </p>
 							<p>*4</p>
 							<p> Audiobook </p>
-							<p> YA, fantasy, retelling </p>
+							<p> YA, fantasy, retelling, mythology, romance </p>
                             </section>
 
                             <section class="Update">
