--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 									<span class="image">
 										<img src="images/pic10.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="Review-10.html">
 										<h2>Together We Rot</h2>
 										<div class="content">
 											<p>In Skyla Arndt's debut paranormal romance, Wil teams up with her ex-best friend Elwood to investigate her mother's disappearance and uncover the secrets behind his family's church: The Garden of Adam. But the Morguewood grows hungry, and Elwood may be their next sacrifice.</p>
