--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 									<span class="image">
 										<img src="images/pic11.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="Review-11.html">
 										<h2>Hide</h2>
 										<div class="content">
 											<p>A supernatural thriller, this Kiersten White novel follows the unwitting contestants of a Hide and Seek contest within an abandoned amusement park. But as more people are found, they start to question who or <em>what</em> is hunting them and have contestants been eliminated <em> permanently</em>?</p>
