--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 									<span class="image">
 										<img src="images/pic12.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="Review-12.html">
 										<h2>Hallowe'en Party</h2>
 										<div class="content">
 											<p>Regarded as one of her darkest mysteries, this Agatha Christie novel follows Hercule Poirot as he investigates the murder of young Joyce Reynolds, who was drowned in a bucket of apples. This novel is the inspiration for <em>A Haunting in Venice</em>.</p>
