--- a/Review-5.html
+++ b/Review-5.html
@@ -50,12 +50,17 @@
 						<div class="inner">
 							<h1>Under the Whispering Door by TJ Klune</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p class="date">June 24, 2023 - June 28, 2023</p>
-                            <p class="rating">Rating: *4</p>
-                            <p class="format"> Audiobook </p>
-                            <p class="genre">Genre: Adult, Fantasy, Paranormal, Romance </p>
+							
+							<section class="basics">
+								<p>June 24, 2023 - June 28, 2023</p>
+                            	<p>Rating: *4</p>
+                            	<p> Audiobook </p>
+                            	<p>Genre: Adult, Fantasy, Paranormal, Romance </p>
+							</section>
 
-                                    <p class="review">Once again a fantastic book by TJ Klune. His narrators and characters all have such vibrant personalities. As soon as I started I knew I was going to love Wallace as much as I hated him because yes he’s awful in the beginning, but he has such a distinctive voice as well. I was having such fun with the characters I completely forgot about the week-long deadline until it shows up near the end (minor spoiler, I guess?) So much of this book is Wallace learning and growing, making connections with Hugo and Nelson and Mei, and adapting to the day-to-day life of Charon’s Crossing. There isn’t much of a plot until the back end of the book and usually that drives me crazy. But I enjoyed this book so much I hardly noticed (though once I did, the tension, questions, and emotional turmoil from the plot kicking in made up for my ensuing apprehension.)</p>
+							<section class="review">
+                                <p>Once again a fantastic book by TJ Klune. His narrators and characters all have such vibrant personalities. As soon as I started I knew I was going to love Wallace as much as I hated him because yes he’s awful in the beginning, but he has such a distinctive voice as well. I was having such fun with the characters I completely forgot about the week-long deadline until it shows up near the end (minor spoiler, I guess?) So much of this book is Wallace learning and growing, making connections with Hugo and Nelson and Mei, and adapting to the day-to-day life of Charon’s Crossing. There isn’t much of a plot until the back end of the book and usually that drives me crazy. But I enjoyed this book so much I hardly noticed (though once I did, the tension, questions, and emotional turmoil from the plot kicking in made up for my ensuing apprehension.)</p>
+							</section>
 						</div>
 					</div>
 
