--- a/Review-8.html
+++ b/Review-8.html
@@ -51,16 +51,21 @@
 							<h1>Lost in the Never Woods by Aidan Thomas</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							
-							<p class="date"> July 21, 2023 - August 11, 2023 </p>
-							<p class="rating">*2.5</p>
-							<p class="format"> Audiobook </p>
-							<p class="genre"> YA, fantasy, retelling </p>
+							<section class="basics">
+								<p> July 21, 2023 - August 11, 2023 </p>
+								<p>*2.5</p>
+								<p> Audiobook </p>
+								<p> YA, fantasy, retelling </p>
+							</section>
 
-							<p class="Review">I really wanted to like this book. I’ve adored Aiden Thomas’ other books and was so excited when I realized his next book was a fairytale retelling. It’s always been one of my favorite genres, and reading the Peter and the Starcatchers series got me into the genre, so I was happy to dive into another Peter Pan story. However, I was bored throughout so much of this book. The beginning and the end, especially, were entertaining but the middle just seemed to drag on.</p> 
+							<section class="review">
+								<p>Review</p>
+								<p>I really wanted to like this book. I’ve adored Aiden Thomas’ other books and was so excited when I realized his next book was a fairytale retelling. It’s always been one of my favorite genres, and reading the Peter and the Starcatchers series got me into the genre, so I was happy to dive into another Peter Pan story. However, I was bored throughout so much of this book. The beginning and the end, especially, were entertaining but the middle just seemed to drag on.</p> 
 
-                            <p class="Review">I started losing interest somewhere around the time Wendy confronted Peter in the hunting shack and confirmed he was in fact trying to help the missing kids not hurt them. After that, so much of the novel was just Wendy trying to hide her activities from her family and friends because no one would believe her (which makes sense but also just got more annoying every time she brought it up and delivered a new lie) or her and Peter wandering around the town and woods with no real idea of how to help.</p>
+                            	<p>I started losing interest somewhere around the time Wendy confronted Peter in the hunting shack and confirmed he was in fact trying to help the missing kids not hurt them. After that, so much of the novel was just Wendy trying to hide her activities from her family and friends because no one would believe her (which makes sense but also just got more annoying every time she brought it up and delivered a new lie) or her and Peter wandering around the town and woods with no real idea of how to help.</p>
                                 
-                            <p class="Review">I will admit, the last few chapters were entertaining and fun. I suspected part of the plot twist, but didn’t quite grasp the scope of it until the big reveal. And while the lack of communication that exacerbated the reveal was annoying, I was so happy to see some out there theories make it into this version’s lore. However, I can’t help thinking so much of the novel was unnecessary to reach that point. Yes, technically all the development between Peter and Wendy was required for the climax of the story, but again it was all just so slow. It doesn’t fit into the supposed deadline and terrible consequences everyone will face if they fail to find the kids and stop their kidnapper. The ending, and it really was a fantastic ending in my eyes, can’t make up for my lackluster opinion of the rest of the novel.</p>
+                           	 	<p>I will admit, the last few chapters were entertaining and fun. I suspected part of the plot twist, but didn’t quite grasp the scope of it until the big reveal. And while the lack of communication that exacerbated the reveal was annoying, I was so happy to see some out there theories make it into this version’s lore. However, I can’t help thinking so much of the novel was unnecessary to reach that point. Yes, technically all the development between Peter and Wendy was required for the climax of the story, but again it was all just so slow. It doesn’t fit into the supposed deadline and terrible consequences everyone will face if they fail to find the kids and stop their kidnapper. The ending, and it really was a fantastic ending in my eyes, can’t make up for my lackluster opinion of the rest of the novel.</p>
+							</section>
 						</div>
 					</div>
 
