--- a/Review-6.html
+++ b/Review-6.html
@@ -58,7 +58,8 @@
                             	<p>Genre: YA, Fantasy, Mythology</p>
 							</section>
 
-                            <section class="review">    
+                            <section class="review">
+								<h2>Review</h2>    
 								<p>The wait for the sequel is going to drive me crazy!</p>
 
                                 <p>This was another really fun read from Aiden Thomas and reminded me of some of my favorite series. The comparisons to Percy Jackson & the Hunger Games are well earned but the Sunbearer Trials remains a unique experience. </p>
