--- a/Review-4.html
+++ b/Review-4.html
@@ -59,10 +59,11 @@
 							</section>
 
 							<section class="update">
-								<p> Update from 73% </p>
+								<h2> Update: 73% </h2>
 								<p> Some of my favorite scenes so far: the hospital scene, the karaoke bar (and the kimonos!), the V&A (I should’ve read this sooner. That was my favorite museum in London last summer), all the romantic metaphors in their emails (how Henry hides his memories in the palace and Alex comparing him to a map)</p>
 							</section>
 
+							<h2>Review</h2>
 							<section class="review">
                                 <p>This book was so sweet and heartwarming! I don’t usually read contemporary novels or just plain romance novels (as in romance is the main plot instead of a subplot) but so many of my friends adore this book so I thought I’d give it a try. I’m so glad I did! I loved watching the development between Henry and Alex and all the romantic moments they had. I might have to start reading more romance novels.</p>
 							</section>
