--- a/Review-3.html
+++ b/Review-3.html
@@ -65,12 +65,13 @@
 							-->
 
                             <section class="update">
-								<p> Update: 51% </p>
+								<h2> Update: 51% </h2>
 								<p>So far this book is so cute and I love all the kids, especially Lucy. He never fails to make me laugh and I’ve spent the whole time imagining him as that Elmo hellfire meme</p>
 								<!--Is there a way to link that meme?-->
 							</section>
 							
 							<section class="review">
+								<h2>Review</h2>
 								<p>Another book I loved! This whole book was so atmospheric and magical. It was a breath of fresh air and and an adventure reminiscent of some of my favorite stories as a kid. It’s one of those books that leaves you feeling giddy and loved.</p>
                                         
                             	<p>One of my favorite parts was the found family of it all. A large chunk of the novel revolves around Linus and his burgeoning relationship to all the kids and caretakers of the island. Theodore and his buttons were adorable! Sal’s growing progress and healing were amazing to watch and Luci was delightfully morbid and cheeky. Both. Chauncey and Thalia made me laugh and of course Linus & Arthur’s relationship was so sweet.</p>
