--- a/Review-8.html
+++ b/Review-8.html
@@ -59,7 +59,7 @@
 							</section>
 
 							<section class="review">
-								<p>Review</p>
+								<h2>Review</h2>
 								<p>I really wanted to like this book. I’ve adored Aiden Thomas’ other books and was so excited when I realized his next book was a fairytale retelling. It’s always been one of my favorite genres, and reading the Peter and the Starcatchers series got me into the genre, so I was happy to dive into another Peter Pan story. However, I was bored throughout so much of this book. The beginning and the end, especially, were entertaining but the middle just seemed to drag on.</p> 
 
                             	<p>I started losing interest somewhere around the time Wendy confronted Peter in the hunting shack and confirmed he was in fact trying to help the missing kids not hurt them. After that, so much of the novel was just Wendy trying to hide her activities from her family and friends because no one would believe her (which makes sense but also just got more annoying every time she brought it up and delivered a new lie) or her and Peter wandering around the town and woods with no real idea of how to help.</p>
