--- a/Review-9.html
+++ b/Review-9.html
@@ -52,31 +52,31 @@
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							
                             <section class="basics">
-							<p> August 14, 2023 - August 25, 2023 </p>
-							<p>*4</p>
-							<p> Audiobook </p>
-							<p> YA, fantasy, retelling, mythology, romance </p>
+								<p> August 14, 2023 - August 25, 2023 </p>
+								<p>*4</p>
+								<p> Audiobook </p>
+								<p> YA, fantasy, retelling, mythology, romance </p>
                             </section>
 
                             <section class="Update">
-							<p> Update: 13%</p>
-                            <p>Loving this so far!</p>
+								<h2> Update: 13%</h2>
+                            	<p>Loving this so far!</p>
 
-                            <p>The dragon and spirit realm reminds me a lot of Spirited Away.</p>
+                            	<p>The dragon and spirit realm reminds me a lot of Spirited Away.</p>
 
-                            <p>Very curious about how the red string of fate ties into everything going forward.</p>
+                            	<p>Very curious about how the red string of fate ties into everything going forward.</p>
 
-                            <p>Also I’m surprisingly not as bothered by the first person narration as I expected. Could be the audiobook though.</p>
+                            	<p>Also I’m surprisingly not as bothered by the first person narration as I expected. Could be the audiobook though.</p>
                             </section>
 
                             <section class="Update">
-                            <p>Update: 80%</p>
-                            <p>I have no idea where they’re going with this now.</p>
+                            	<h2>Update: 80%</h2>
+                            	<p>I have no idea where they’re going with this now.</p>
                             </section>
 
                             <section class="Review">
-                            <p class="Review">Review</p>
-                            <!--Write and insert review here!!!-->
+                            	<h2>Review</h2>
+                            	<!--Write and insert review here!!!-->
                             
                             </section>
 
