--- a/Review-11.html
+++ b/Review-11.html
@@ -52,20 +52,20 @@
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							
                             <section class="basics">
-							<p> September 11, 2023 - September 14, 2023 </p>
-							<p>*4.75</p>
-							<p> Audiobook </p>
-							<p> Adult, horror, paranormal, mystery/thriller, retelling </p>
+								<p> September 11, 2023 - September 14, 2023 </p>
+								<p>*4.75</p>
+								<p> Audiobook </p>
+								<p> Adult, horror, paranormal, mystery/thriller, retelling </p>
                             </section>
 
                             <section class="Update">
-							<p>Update: 80%</p>
-                            <p>I should’ve remembered the Squid Game comparisons. But at least this book looks like it will provide actual answers and some measure of resolution. </p>
+								<h2>Update: 80%</h2>
+                            	<p>I should’ve remembered the Squid Game comparisons. But at least this book looks like it will provide actual answers and some measure of resolution. </p>
                             </section>
 
                             <section class="Review">
-                            <p class="Review">Review</p>
-                            <!--Write and insert review here!!!-->
+                            	<h2>Review</h2>
+                            	<!--Write and insert review here!!!-->
                             
                             </section>
 
