--- a/Review-12.html
+++ b/Review-12.html
@@ -59,7 +59,7 @@
                             </section>
 
                             <section class="Review">
-                                <p class="Review">Review</p>
+                                <h2>Review</h2>
                                 <!--Write and insert review here!!!-->
                             
                             </section>
