--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 									<span class="image">
 										<img src="images/pic07.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="Review-7.html">
 										<h2>Katzenjammer</h2>
 										<div class="content">
 											<!--Description too long for phone view (when the boxes are much thinner)-->
