--- a/Review-9.html
+++ b/Review-9.html
@@ -58,7 +58,7 @@
 								<p> YA, fantasy, retelling, mythology, romance </p>
                             </section>
 
-                            <section class="Update">
+                            <section class="update">
 								<h2> Update: 13%</h2>
                             	<p>Loving this so far!</p>
 
@@ -69,12 +69,12 @@
                             	<p>Also I’m surprisingly not as bothered by the first person narration as I expected. Could be the audiobook though.</p>
                             </section>
 
-                            <section class="Update">
+                            <section class="update">
                             	<h2>Update: 80%</h2>
                             	<p>I have no idea where they’re going with this now.</p>
                             </section>
 
-                            <section class="Review">
+                            <section class="review">
                             	<h2>Review</h2>
                             	<!--Write and insert review here!!!-->
                             
