--- a/Review-10.html
+++ b/Review-10.html
@@ -58,7 +58,7 @@
 								<p> YA, fantasy, horror, paranormal </p>
                             </section>
 
-                            <section class="Update">
+                            <section class="update">
 								<h2>Update: 19%</h2>
                             	<p>The audiobook has two narrators and the woman voicing Wil is such a fantastic actor! She has so much emotion and sass. I love it!</p>
 
@@ -67,12 +67,12 @@
                             	<p>And I’ve finally found some high school characters with complexity! I knew this was gonna be a good one and I am not disappointed </p>
                             </section>
 
-                            <section class="Update">
+                            <section class="update">
                             	<h2>Update: 55%</h2>
                             	<p>Half-way through and I’m still super excited and invested in this book! Too many of my recent reads have not lived up to the hype or dropped off in the middle, leaving me feeling confused, wishing parts had been cut, or questioning where the book was going (and not in a fun way). This book has none of those issues & I expect this to be a new favorite.</p>
                             </section>
 
-                            <section class="Review">
+                            <section class="review">
                            		<h2>Review</h2>
                            		<!--Write and insert review here!!!-->
                             
