--- a/Review-11.html
+++ b/Review-11.html
@@ -58,12 +58,12 @@
 								<p> Adult, horror, paranormal, mystery/thriller, retelling </p>
                             </section>
 
-                            <section class="Update">
+                            <section class="update">
 								<h2>Update: 80%</h2>
                             	<p>I should’ve remembered the Squid Game comparisons. But at least this book looks like it will provide actual answers and some measure of resolution. </p>
                             </section>
 
-                            <section class="Review">
+                            <section class="review">
                             	<h2>Review</h2>
                             	<!--Write and insert review here!!!-->
                             
