--- a/Review-12.html
+++ b/Review-12.html
@@ -58,7 +58,7 @@
 							    <p> Crime, Mystery/Thriller, Detective Fiction </p>
                             </section>
 
-                            <section class="Review">
+                            <section class="review">
                                 <h2>Review</h2>
                                 <!--Write and insert review here!!!-->
                             
