--- a/generic.html
+++ b/generic.html
@@ -51,11 +51,39 @@
 							<h1>Review Archive</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							
+							<!--Probably better to change into an unordered list-->
 							<p>Beowulf</p>
 							<p>The Mere Wife</p>
 							<p>The Westing Game</p>
 							<p>The Hobbit</p>
 							<p>A Whole New World</p>
+							<p>Reflection</p>
+							<p>The Unstill Ones</p>
+							<p>None Shall Sleep</p>
+							<p>The Wake</p>
+							<p>The Magnolia Sword</p>
+							<p>Sadie</p>
+							<p>The Once and Future King</p>
+							<p>H is for Hawk</p>
+							<p>The Inheritance Games</p>
+							<p>Cemetery Boys</p>
+							<p>All Systems Red</p>
+							<p>The House in the Cerulean Sea</p>
+							<p>Caraval</p>
+							<p>Legendary</p>
+							<p>Red, White & Royal Blue</p>
+							<p>Under the Whispering Door</p>
+							<p>Artificial Condition</p>
+							<p>The Sunbearer Trials</p>
+							<p>Katzenjammer</p>
+							<p>Lost in the Never Woods</p>
+							<p>The Girl Who Fell Beneath the Seas</p>
+							<p>Together We Rot</p>
+							<p>Hide</p>
+							<p>Hallowe'en Party</p>
+							<!--Hidden until it is finished
+							<p>The Sacrifice</p> -->
+
 						</div>
 					</div>
 
