--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="Review-1.html">
+									<a href="main-reviews/1-inheritance.html">
 										<h2>The Inheritance Games</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -69,7 +69,7 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="Review-2.html">
+									<a href="main-reviews/2-cemetery.html">
 										<h2>Cemetery Boys</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -80,7 +80,7 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="Review-3.html">
+									<a href="main-reviews/3-cerulean.html">
 										<h2>The House in the Cerulean Sea</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -91,7 +91,7 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="Review-4.html">
+									<a href="main-reviews/4-rwrb.html">
 										<h2>Red, White & Royal Blue</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -102,7 +102,7 @@
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
-									<a href="Review-5.html">
+									<a href="main-reviews/5-whispering.html">
 										<h2>Under the Whispering Door</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -113,7 +113,7 @@
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
 									</span>
-									<a href="Review-6.html">
+									<a href="main-reviews/6-sunbearer.html">
 										<h2>The Sunbearer Trials</h2>
 										<div class="content">
 											<!--Seriously cut down on this one. Too long for the cellphone view-->								
@@ -125,7 +125,7 @@
 									<span class="image">
 										<img src="images/pic07.jpg" alt="" />
 									</span>
-									<a href="Review-7.html">
+									<a href="main-reviews/7-katzenjammer.html">
 										<h2>Katzenjammer</h2>
 										<div class="content">
 											<!--Description too long for phone view (when the boxes are much thinner)-->
@@ -137,7 +137,7 @@
 									<span class="image">
 										<img src="images/pic08.jpg" alt="" />
 									</span>
-									<a href="Review-8.html">
+									<a href="main-reviews/8-neverwoods.html">
 										<h2>Lost in the Never Woods</h2>
 										<div class="content">
 											<p>A modern retelling of Peter Pan, Aiden Thomas' sophomore novel centers on a Wendy Darling still reeling from her brothers' disappearnce five years ago and the memories she can't recall. When more kids go missing, a mysterious boy claims she is the only one with the power to find them.</p>
@@ -148,7 +148,7 @@
 									<span class="image">
 										<img src="images/pic09.jpg" alt="" />
 									</span>
-									<a href="Review-9.html">
+									<a href="main-reviews/9-girl.html">
 										<h2>The Girl Who Fell Beneath the Sea</h2>
 										<div class="content">
 											<!--Re-word and shorten this descriptoin-->
@@ -160,7 +160,7 @@
 									<span class="image">
 										<img src="images/pic10.jpg" alt="" />
 									</span>
-									<a href="Review-10.html">
+									<a href="main-reviews/10-rot.html">
 										<h2>Together We Rot</h2>
 										<div class="content">
 											<p>In Skyla Arndt's debut paranormal romance, Wil teams up with her ex-best friend Elwood to investigate her mother's disappearance and uncover the secrets behind his family's church: The Garden of Adam. But the Morguewood grows hungry, and Elwood may be their next sacrifice.</p>
@@ -171,7 +171,7 @@
 									<span class="image">
 										<img src="images/pic11.jpg" alt="" />
 									</span>
-									<a href="Review-11.html">
+									<a href="main-reviews/11-hide.html">
 										<h2>Hide</h2>
 										<div class="content">
 											<p>A supernatural thriller, this Kiersten White novel follows the unwitting contestants of a Hide and Seek contest within an abandoned amusement park. But as more people are found, they start to question who or <em>what</em> is hunting them and have contestants been eliminated <em> permanently</em>?</p>
@@ -182,7 +182,7 @@
 									<span class="image">
 										<img src="images/pic12.jpg" alt="" />
 									</span>
-									<a href="Review-12.html">
+									<a href="main-reviews/12-hallowe'en.html">
 										<h2>Hallowe'en Party</h2>
 										<div class="content">
 											<p>Regarded as one of her darkest mysteries, this Agatha Christie novel follows Hercule Poirot as he investigates the murder of young Joyce Reynolds, who was drowned in a bucket of apples. This novel is the inspiration for <em>A Haunting in Venice</em>.</p>
