--- a/Archive.html
+++ b/Archive.html
@@ -66,26 +66,25 @@
 								<li>Sadie</li>
 								<li>The Once and Future King</li>
 								<li>H is for Hawk</li>
-								<li>The Inheritance Games</li>
-								<li>Cemetery Boys</li>
+								<li><a href="main-reviews/1-inheritance.html">The Inheritance Games</a></li>
+								<li><a href="main-reviews/2-cemetery.html">Cemetery Boys</a></li>
 								<li>All Systems Red</li>
-								<li>The House in the Cerulean Sea</li>
+								<li><a href="main-reviews/3-cerulean.html">The House in the Cerulean Sea</a></li>
 								<li>Caraval</li>
 								<li>Legendary</li>
-								<li>Red, White & Royal Blue</li>
-								<li>Under the Whispering Door</li>
+								<li><a href="main-reviews/4-rwrb.html">Red, White & Royal Blue</a></li>
+								<li><a href="main-reviews/5-whispering.html">Under the Whispering Door</a></li>
 								<li>Artificial Condition</li>
-								<li>The Sunbearer Trials</li>
-								<li>Katzenjammer</li>
-								<li>Lost in the Never Woods</li>
-								<li>The Girl Who Fell Beneath the Seas</li>
-								<li>Together We Rot</li>
-								<li>Hide</li>
-								<li>Hallowe'en Party</li>
+								<li><a href="main-reviews/6-sunbearer.html">The Sunbearer Trials</a></li>
+								<li><a href="main-reviews/7-katzenjammer.html">Katzenjammer</a></li>
+								<li><a href="main-reviews/8-neverwoods.html">Lost in the Never Woods</a></li>
+								<li><a href="main-reviews/9-girl.html">The Girl Who Fell Beneath the Seas</a></li>
+								<li><a href="main-reviews/10-rot.html">Together We Rot</a></li>
+								<li><a href="main-reviews/11-hide.html">Hide</a></li>
+								<li><a href="main-reviews/12-hallowe'en.html">Hallowe'en Party</a></li>
+								<!--Hidden until it is finished
+								<li>The Sacrifice</li> -->
 							</ul>
-							<!--Hidden until it is finished
-							<p>The Sacrifice</p> -->
-
 						</div>
 					</div>
 
