2-cemetery classification change
Removed individual classifications among the Basics section

--- a/main-reviews/2-cemetery.html
+++ b/main-reviews/2-cemetery.html
@@ -52,10 +52,10 @@
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							
 							<section class="basics">
-								<p class="date">May 31, 2023 - June 5, 2023</p>
-                            	<p class="rating">Rating: *4</p>
-                            	<p class="format"> Audiobook </p>
-                            	<p class="genre">Genre: YA, Fantasy, Mythology, Paranormal, Romance </p>
+								<p>May 31, 2023 - June 5, 2023</p>
+                            	<p>Rating: *4</p>
+                            	<p> Audiobook </p>
+                            	<p>Genre: YA, Fantasy, Mythology, Paranormal, Romance </p>
 							</section>
 
 							<section class="review">
